client/src/res/styles/index.css
@import url('https://fonts.googleapis.com/css?family=Lato|Pacifico|Ubuntu|Vollkorn+SC');

body {
    margin: 0;
    padding: 0;
    font-family: Lato, sans-serif;
}

* {
    box-sizing: border-box;
}

/* --- Styles for page structure --- */

.container {
    margin: auto;
    display: flex;
    padding: 0 1em;
    max-width: 860px;
    flex-direction: column;
}

.row {
    width: 100%;
    display: flex;
    flex-direction: row;
}

/* --- Styles for page header --- */

header {
    width: 100%;
    text-align: center;
    margin-bottom: 1em;
}

header > h1 {
    color: #de212e;
    margin: 0;
    font-family: 'Pacifico';
    font-size: 2.5em;
    font-weight: 100;
}

header.logo {
    padding: 1.5em;
    padding-bottom: 2em;
    position: relative;
    flex-direction: column;
}

header.logo::before {
    background-repeat: no-repeat;
    background-image: url('../images/video-content-creator.svg');
    background-position: center;
    background-size: cover;
    content: '';
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    position: absolute;
    opacity: 0.05;
}

header.logo::after {
    content: '';
    width: 100%;
    height: 5px;
    position: absolute;
    bottom: 0;
    left: 0;
    background: red;
    border-radius: 50%;
}

/* --- Test styles --- */

:not(header).row > * {
    padding: 1em;
    margin: .5em;
}

.row > *:not(:last-child) {
    margin-right: 0;
}

.row > aside {
    min-width: 14em;
}

.row > main {
    flex-grow: 1;
}

small {
    color: gray;
    display: block;
    font-family: 'Vollkorn SC';
}

small > em {
    font-style: normal;
    color:#de212e;
}

section.side-block {
    background: white;
    border: #de212e 1px solid;
    margin-bottom: 1em;
}

.side-block h1 {
    margin: 0;
    background: #de212e;
    padding: .75em;
    color: white;
    font-weight: 400;
}

main h1, h2, h3 {
    color: #de212e;
    font-family: Ubuntu;
    margin-bottom: .5em;
}

main small {
    color: gray;
    display: block;
    font-family: 'Vollkorn SC';
    font-size: .75em;
}

.post-body {
    padding: 1em 0;
    text-align: justify;
}

.stats {
    text-align: center;
}

.post-details h2, .post-details .post {
    margin-top: 0;
    padding-top: 0;
}

.button-container {
    display: flex;
    align-items: center;
    justify-content: space-between;
    clear: both;
}

.button-container button {
    margin-right: .5em;
    border: 1px solid #de212e;
    padding: .5em;
    color: #de212e;
    background: white;
    border-radius: 5px;
}

.button-container button[disabled] {
    color: white;
    background: #de212e;
}

.button-container button:not([disabled]) {
    cursor: pointer;
}

.button-container > * {
    text-align: center;
    margin: 1em 0;
}

.comment .button-container button {
    font-size: 0.7em;
}

.comment .button-container > * {
    margin: 0;
}

.comment .button-container .score {
    width: 4em;
}

.comment-box {
    padding: 0 .5em;
}

.comment-box h3 {
    margin-top: 1.5em;
}

.comment small {
    text-align: right;
    padding: 0;
}

.comment p {
    margin-top: 0;
}

.score-box {
    display: flex;
    width: 70px;
    flex-direction: column;
    height: 100px;
    justify-content: flex-end;
}

.score-box .icon {
    flex-grow: 1;
    background-repeat: no-repeat;
    background-image: url('../images/lebkuchen-poker-face.svg');
    background-size: 80%;
    background-position-y: 10px;
    background-position-x: center;
}

.score-box.positive .icon {
    background-image: url('../images/lebkuchen-smile.svg');
}

.score-box.negative .icon {
    background-image: url('../images/lebkuchen-angry.svg');
}

.score-box .score {
    background: grey;
    padding: .25em .5em;
    color: white;
    text-align: center;
    border-radius: 5px;
}

.score-box.positive .score {
    background: green;
}

.score-box.negative .score {
    background: #de212e;
}

.score-box {
    float: right;
    margin-left: 1em;
}

article.post {
    padding: 1em 0;
    position: relative;
}

article.post:not(:last-child)::after {
    content: '';
    width: 100%;
    height: 3px;
    position: absolute;
    bottom: 0;
    left: 0;
    background: red;
    border-radius: 50%;
}

a, a:visited, a:active {
    cursor: pointer;
    color: #de212e;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

section.side-block ul {
    list-style-type: circle;
    line-height: 2em;
    text-transform: capitalize;
}

.floating-btn {
    border-radius: 50%;
    background: #de212e;
    position: fixed;
    bottom: 2em;
    width: 3em;
    height: 3em;
    right: 2em;
    background-image: url('../images/add-new-document.svg');
    background-size: 1.5em;
    background-position: center;
    background-repeat: no-repeat;
    box-shadow: 1px 1px 1px 1px grey;
}

form {
    width: 100%;
    padding: 2em;
    background: lemonchiffon;
    border-radius: 5px;
}

form > * {
    display: block;
    width: 100%;
    margin-bottom: .5em;
}

form > input, form > textarea {
    padding: .5em;
    border-radius: 5px;
    border: solid 1px gray;
}

form > input:not(:last-child), form > textarea:not(:last-child) {
    margin-bottom: 1.5em;
}

form label {
    padding: 0 .5em;
}

form textarea {
    min-height: 10em;
    font-family: Lato, sans-serif;
}

form input, form textarea, form select {
    padding: .5em;
    border: 0;
    border-bottom: 2px solid #de212e;
    border-radius: 5px;
    font-size: 1em;
}

form button[type='submit'] {
    margin-top: 1em;
    background: #de212e;
    border: 0;
    padding: 1em;
    color: white;
    font-size: 1em;
    border-radius: 5px;
    text-transform: uppercase;
}

form > select[disabled], form > input[readonly] {
    color: gray;
    border-bottom-color: gray;
}

.loader {
    color: red;
    text-align: center;
    padding: 3em 1em;
}

section.side-block {
    border-radius: 5px;
}

section.side-block ul {
    list-style-type: none;
    padding: 0 1.5em;
}

section.side-block ul i {
    color: darksalmon;
    padding-right: 1.5em;
}

section.side-block ul .active i {
    color: #de212e;
}

/* --- Error page --- */

.error-details {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.error-details h2 {
    margin-top: 0;
}

.error-details .image {
    width: 10em;
    height: 10em;
    margin: 3em;
    background-position: center;
    background-repeat: no-repeat;
    background-size: contain;
    background-image: url('../images/lebkuchen-cry.svg');
}

.error-details pre {
    padding: 1em;
    background: antiquewhite;
    width: 75%;
    border-radius: 5px;
    text-align: center;
    white-space: pre-line;
    line-height: 1.75em;
}

/* --- Test styles for comment boxes --- */

.comment-list {
    margin: 2em;
}

.comment {
    padding: 1em;
    border-radius: .3em;
    position: relative;
    margin-bottom: 2.5em;
}

.comment::after {
    content: '';
    width: 1.25em;
    height: 1.25em;
    position: absolute;
    bottom: -0.6em;
    right: 2em;
    z-index: -1;
    transform: rotate(45deg);
}

.comment, .comment::after {
    background: #fdf3f4;
}

.comment:nth-child(odd)::after {
    left: 2em;
    right: unset;
}

.comment:nth-child(odd), .comment:nth-child(odd)::after {
    background: #fff5eb;
}

.comment-score-container {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.comment-score-container .actions {
    margin: 0;
}

.actions > :last-child {
    margin: 0;
}

.comment-score-container * {
    font-size: .8em;
}

.comment-score-container .score {
    border: 1px solid #de212e;
    padding: .5em;
    width: 4em;
    text-align: center;
    color: white;
    background: #de212e;
    border-radius: 5px;
    margin: 0 .5em 0 0;
    display: inline-block;
}

.comment-score-container i.fa {
    font-size: 1.25em;
}

.comment .body {
    margin: 1em 0;
    text-align: justify;
}

